# rosetta_desktop

./: README.md  copy-dist.js  index.html  package.json
.github/workflows/: build.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
