[package]
name = "rosetta-erp"
version = "1.0.0"
description = "Rosetta ERP - نظام روزيتا المتحدة للمبيدات الزراعية"
authors = ["Rosetta"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
rfd = "0.14"

[[bin]]
name = "rosetta-erp"
path = "src/main.rs"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
